--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -247,6 +247,12 @@ tr.thin {
   opacity: 1;
 }
 
+.sharethis span {
+  -webkit-box-sizing: content-box;
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
+}
+
 //.footer {
 //  position: absolute;
 //  bottom: 0;
