--- a/app/views/shared/footer.html
+++ b/app/views/shared/footer.html
@@ -1,10 +1,17 @@
 <footer class="footer">
   <div class="container">
     <div class="row">
-      <div class="col-md-6 col-xs-6">
-        <h5 class="custom-font pt-10 text-left">© 2015 DestinyTrialsReport</h5>
+      <div class="col-xs-4 text-left mt-10">
+        <h5 class="custom-font">© 2015 DestinyTrialsReport</h5>
       </div>
-      <div class="col-md-6 col-xs-6 mt-5">
+      <div class="col-xs-4 text-center" style="margin-top:15px">
+        <div class="sharethis">
+          <span class='st_facebook_hcount' displayText='Facebook'></span>
+          <span class='st_twitter_hcount' displayText='Tweet'></span>
+          <span class='st_reddit_hcount' displayText='Reddit'></span>
+        </div>
+      </div>
+      <div class="col-xs-4 text-right mt-5">
         <form action="https://www.paypal.com/cgi-bin/webscr" method="post" class="text-right" target="_top">
           <input type="hidden" name="cmd" value="_s-xclick">
           <input type="hidden" name="hosted_button_id" value="A3T6F2QDXUTCN">
