--- a/app/views/shared/footer.html
+++ b/app/views/shared/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer">
   <div class="container">
-    <div class="row visible-xs-block">
+    <div class="row visible-xs-block mb-5">
       <div class="col-xs-12 text-center">
         <div class="sharethis">
           <span class='st_facebook_hcount' displayText='Facebook'></span>
