remove chardin on mobile

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -20,7 +20,8 @@
                     analytics-on analytics-event="Click"
                     analytics-category="Refresh Inventory"
                     data-intro="Refreshes inventory for all players<br/><em>(weapons, armor, class)</em>"
-                    data-position="left">
+                    data-position="left"
+                    data-class="hidden-xs">
                     Refresh Inventory
             </button>
           </div>
