--- a/app/views/fireteam/stats.html
+++ b/app/views/fireteam/stats.html
@@ -1,5 +1,5 @@
 <div class="row ml-0 mr-0" style="margin-top:-3px">
-  <div class="col-md-12 col-sm-12 col-xs-12 pl-0 pr-0" data-intro="Bar size relative to the percentage of the sum<br/><em>hover over the icons for true percentage</em>" data-position="left" data-class="green">
+  <div class="col-md-12 col-sm-12 col-xs-12 pl-0 pr-0" data-intro="Bar size relative to the percentage of the sum<br/><em>hover over the icons for true percentage</em>" data-position="left" data-class="green hidden-xs">
     <progress animate="true" class="progress-striped not-rounded m-0">
       <bar value="player.cIntPercent" popover="Intellect: {{player.int}} ({{player.intPercent}}%)" popover-trigger="mouseenter" type="greensea">
         <span ng-show="player.cIntPercent >= 27">Intellect {{player.intPercent}}%</span>
@@ -20,7 +20,7 @@
   </div>
 </div>
 
-<div class="row ml-0 mr-0 mb-10" data-intro="Match win/loss history<br/><em>hover over the icons for details</em>" data-position="right" data-class="red">
+<div class="row ml-0 mr-0 mb-10" data-intro="Match win/loss history<br/><em>hover over the icons for details</em>" data-position="right" data-class="red hidden-xs">
   <div class="col-xs-12 pr-0 pl-0 text-center win-loss">
     <i class="fa fa-circle mr-3 {{$index < 7 ? (player.pastActivities.length - $index ) > 18 ? 'hidden-xs' : '' : ''}}"
        ng-repeat="str in player.pastActivities track by $index"
