--- a/app/views/main.html
+++ b/app/views/main.html
@@ -21,7 +21,7 @@
                     analytics-category="Refresh Inventory"
                     data-intro="Refreshes inventory for all players<br/><em>(weapons, armor, class)</em>"
                     data-position="left"
-                    data-class="hidden-xs">
+                    data-class="hidden-xs hidden-sm">
                     Refresh Inventory
             </button>
           </div>
