--- a/app/views/fireteam/history.html
+++ b/app/views/fireteam/history.html
@@ -1,7 +1,7 @@
-<div class="row">
+<div class="row" style="margin-top: -3px;">
   <div class="col-xs-3 pr-0">
     <div class="col-xs-12 p-0 text-center">
-      <h5 class="custom-font filled bg-danger">Kills</h5>
+      <h5 class="mt-0 custom-font filled bg-danger">Kills</h5>
     </div>
     <div class="col-xs-12 p-0 text-center">
       <h4 class="mt-0" ng-bind="player.allStats.kills.basic.displayValue"></h4>
@@ -9,7 +9,7 @@
   </div>
   <div class="col-xs-3 p-0">
     <div class="col-xs-12 p-0 text-center">
-      <h5 class="custom-font filled bg-danger">Deaths</h5>
+      <h5 class="mt-0 custom-font filled bg-danger">Deaths</h5>
     </div>
     <div class="col-xs-12 p-0 text-center">
       <h4 class="mt-0" ng-bind="player.allStats.deaths.basic.displayValue"></h4>
@@ -17,7 +17,7 @@
   </div>
   <div class="col-xs-3 p-0">
     <div class="col-xs-12 p-0 text-center">
-      <h5 class="custom-font filled bg-danger">Assists</h5>
+      <h5 class="mt-0 custom-font filled bg-danger">Assists</h5>
     </div>
     <div class="col-xs-12 p-0 text-center">
       <h4 class="mt-0" ng-bind="player.allStats.assists.basic.displayValue"></h4>
@@ -25,7 +25,7 @@
   </div>
   <div class="col-xs-3 pl-0">
     <div class="col-xs-12 p-0 text-center">
-      <h5 class="custom-font filled bg-danger">K/D</h5>
+      <h5 class="mt-0 custom-font filled bg-danger">K/D</h5>
     </div>
     <div class="col-xs-12 p-0 text-center">
       <h4 class="mt-0" ng-bind="player.allStats.killsDeathsRatio.basic.displayValue"></h4>
