map tab remove bottom margin

--- a/app/views/fireteam/maps.html
+++ b/app/views/fireteam/maps.html
@@ -4,22 +4,22 @@
       <thead>
       <tr>
         <th class="p-0">
-          <h5 class="mt-0 custom-font filled bg-danger">Map</h5>
+          <h5 class="mt-0 mb-0 custom-font filled bg-danger">Map</h5>
         </th>
         <th class="p-0">
-          <h5 class="mt-0 custom-font filled bg-danger">K</h5>
+          <h5 class="mt-0 mb-0 custom-font filled bg-danger">K</h5>
         </th>
         <th class="p-0">
-          <h5 class="mt-0 custom-font filled bg-danger">D</h5>
+          <h5 class="mt-0 mb-0 custom-font filled bg-danger">D</h5>
         </th>
         <th class="p-0">
-          <h5 class="mt-0 custom-font filled bg-danger">A</h5>
+          <h5 class="mt-0 mb-0 custom-font filled bg-danger">A</h5>
         </th>
         <th class="p-0">
-          <h5 class="mt-0 custom-font filled bg-danger">W</h5>
+          <h5 class="mt-0 mb-0 custom-font filled bg-danger">W</h5>
         </th>
         <th class="p-0">
-          <h5 class="mt-0 custom-font filled bg-danger">L</h5>
+          <h5 class="mt-0 mb-0 custom-font filled bg-danger">L</h5>
 
         </th>
       </tr>
