--- a/app/views/fireteam/info.html
+++ b/app/views/fireteam/info.html
@@ -4,7 +4,7 @@
       <p class="large mb-0">
         <span ng-bind="player.name"></span>
         <span ng-show="player.stats.killsDeathsRatio" class="right pr-10">
-          <span class="hidden-xs">K/D:</span>
+          <span class="hidden-xs hidden-md">K/D:</span>
           <span ng-bind="player.stats.killsDeathsRatio.basic.displayValue"></span>
         </span>
       </p>
