--- a/app/views/fireteam/stats.html
+++ b/app/views/fireteam/stats.html
@@ -22,7 +22,7 @@
 
 <div class="row ml-0 mr-0 mb-10" data-intro="Match win/loss history<br/><em>hover over the icons for details</em>" data-position="right" data-class="red hidden-xs hidden-sm">
   <div class="col-xs-12 pr-0 pl-0 text-center win-loss">
-    <i class="fa fa-circle mr-3 {{$index < 7 ? (player.pastActivities.length - $index ) > 18 ? 'hidden-xs' : '' : ''}}"
+    <i class="fa fa-circle mr-3 {{$index < 7 ? (player.pastActivities.length - $index ) > 18 ? 'hidden-xs hidden-md' : '' : ''}}"
        ng-repeat="str in player.pastActivities track by $index"
        ng-class="str.standing === 0 ? 'win' : 'lose'"
        popover="K/D: {{str.kd}} with {{str.kills}} kills"
