new angular-bootstrap version, remove workaround

--- a/app/views/fireteam/stats.html
+++ b/app/views/fireteam/stats.html
@@ -1,17 +1,17 @@
 <div class="row ml-0 mr-0" style="margin-top:-3px">
   <div class="col-md-12 col-sm-12 col-xs-12 pl-0 pr-0" data-intro="Bar size relative to the percentage of the sum<br/><em>hover over the icons for true percentage</em>" data-position="left" data-class="green hidden-xs hidden-sm">
-    <progress animate="true" class="progress-striped not-rounded m-0">
-      <bar value="player.cIntPercent" popover="Intellect: {{player.int}} ({{player.intPercent}}%)" popover-trigger="mouseenter" type="greensea">
+    <progress max="player.cTotal" animate="true" class="progress-striped not-rounded m-0">
+      <bar value="player.cInt" popover="Intellect: {{player.int}} ({{player.intPercent}}%)" popover-trigger="mouseenter" type="greensea">
         <span ng-show="player.cIntPercent >= 27">Intellect {{player.intPercent}}%</span>
         <span ng-show="player.cIntPercent <  27 && player.cIntPercent >= 16">Int {{player.intPercent}}%</span>
         <span ng-show="player.cIntPercent <  16">Int</span>
       </bar>
-      <bar value="player.cDisPercent" popover="Discipline: {{player.dis}} ({{player.disPercent}}%)" popover-trigger="mouseenter">
+      <bar value="player.cDis" popover="Discipline: {{player.dis}} ({{player.disPercent}}%)" popover-trigger="mouseenter">
         <span ng-show="player.cDisPercent >= 27">Discipline {{player.disPercent}}%</span>
         <span ng-show="player.cDisPercent <  27 && player.cDisPercent >= 16">Dis {{player.disPercent}}%</span>
         <span ng-show="player.cDisPercent <  16">Dis</span>
       </bar>
-      <bar value="player.cStrPercent" popover="Strength: {{player.str}} ({{player.strPercent}}%)" popover-trigger="mouseenter" type="warning">
+      <bar value="player.cStr" popover="Strength: {{player.str}} ({{player.strPercent}}%)" popover-trigger="mouseenter" type="warning">
         <span ng-show="player.cStrPercent >= 27">Strength {{player.strPercent}}%</span>
         <span ng-show="player.cStrPercent <  27 && player.cStrPercent >= 16">Str {{player.strPercent}}%</span>
         <span ng-show="player.cStrPercent <  16">Str</span>
@@ -31,4 +31,3 @@
       ></i>
   </div>
 </div>
-
