--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,7 +1,8 @@
 $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/bootstrap/";
 // bower:scss
+@import "font-awesome/scss/font-awesome.scss";
 @import "bootstrap-sass-official/assets/stylesheets/_bootstrap.scss";
-@import "bourbon/dist/_bourbon.scss";
+@import "bourbon/app/assets/stylesheets/_bourbon.scss";
 // endbower
 // My variables, mixins and colors
 @import "inc/mixins"; // main mixins
