--- a/app/views/fireteam/history.html
+++ b/app/views/fireteam/history.html
@@ -64,9 +64,9 @@
   <div class="col-xs-6 {{$even ? '' : 'pl-0'}}" ng-repeat="weapon in player.playerWeapons">
     <div class="col-xs-6 text-center p-0">
       <a class="icon icon-default"
-         popover="{{DestinyWeaponDefinition[weapon.referenceId].name}}"
+         popover="{{getWeaponByHash(weapon.referenceId).name}}"
          popover-trigger="mouseenter">
-        <img class="img-responsive" ng-src="{{DestinyWeaponDefinition[weapon.referenceId].icon || ''}}">
+        <img class="img-responsive" ng-src="{{getWeaponByHash(weapon.referenceId).icon || ''}}">
       </a>
     </div>
     <div class="col-xs-6 text-center p-0">
