attempt 1 at fixing font-awesome issue

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,9 +1,12 @@
 $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/bootstrap/";
+$fa-font-path: "../bower_components/font-awesome/fonts/";
+
 // bower:scss
 @import "font-awesome/scss/font-awesome.scss";
 @import "bootstrap-sass-official/assets/stylesheets/_bootstrap.scss";
 @import "bourbon/app/assets/stylesheets/_bourbon.scss";
 // endbower
+
 // My variables, mixins and colors
 @import "inc/mixins"; // main mixins
 @import "inc/colors"; // colors variables
