--- a/app/styles/inc/_variables.scss
+++ b/app/styles/inc/_variables.scss
@@ -64,7 +64,7 @@ $transparent-black-9:       rgba(0,0,0,.9);
 $link-color:                    $transparent-white-5;
 $link-color-dark:               $transparent-black-5;
 $active-el:                     $greensea;
-$content-bg:                    lighten(#616f77, 49%);
+$content-bg:                    $transparent-black-9;
 $active-link-bg:                #f8f8f8;
 
 
