--- a/app/views/shared/footer.html
+++ b/app/views/shared/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer class="footer" id="footer">
   <div class="container">
     <div class="row visible-xs-block mb-5">
       <div class="col-xs-12 text-center">
