--- a/app/views/shared/header.html
+++ b/app/views/shared/header.html
@@ -7,7 +7,9 @@
           <form class="form-horizontal" role="form" ng-submit="searchPlayerbyName(mainPlayer, platformValue, 0, true)">
             <div class="onoffswitch labeled">
               <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="platformSwitch" ng-model="platformValue">
-              <label class="onoffswitch-label" for="platformSwitch">
+              <label class="onoffswitch-label z99999999" for="platformSwitch"
+                     data-intro="Toggle between PS and Xbox platforms"
+                     data-position="left" ng-attr-data-class="hidden-xs hidden-sm">
                 <span class="onoffswitch-inner"></span>
                 <span class="onoffswitch-switch"></span>
               </label>
@@ -20,12 +22,10 @@
             </div>
           </form>
         </div>
-        <!--<div class="col-md-1 hidden-xs mt-20 mb-20 pl-0">-->
-          <!--<a ng-if="fireteam[0].name && fireteam[0].membershipType" class="btn btn-icon-only">-->
-            <!--<i class="fa fa-link" ui-zeroclip zeroclip-copied="copiedMessage()"-->
-               <!--zeroclip-text="http://www.DestinyTrialsReport.com/{{platformValue ? 'ps' : 'xbox'}}/{{fireteam[0].name}}"></i>-->
-          <!--</a>-->
-        <!--</div>-->
+        <div class="col-md-1 hidden-xs hidden-sm mt-20 mb-20 pl-0">
+          <a href="" ng-click="toggleOverlay()" class="btn btn-icon-only"><i class="fa fa-info-circle"></i></a>
+          </a>
+        </div>
       </div>
     </div>
   </div>
