--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -87,8 +87,11 @@ body {
 }
 
 .dark-theme {
-  background-color: $darker-darkgray;
+  background-color: $darkest-darkgray;
   color: $transparent-white-8;
+  //background-image: url('https://www.bungie.net/img/theme/destiny/bgs/event/trialsosiris/bg_1.jpg');
+  background-repeat: no-repeat;
+  background-position: top;
   h1 {
     color: $lighten-orange;
   }
@@ -100,16 +103,10 @@ body {
     background-position: left, right;
     background-color: #000;
     border: none;
-    margin-bottom: 0px;
-  }
-
-  .player-wrapper {
-    background-color: $darken-darkgray;
-    padding-top: 15px;
   }
 
   .player {
-    background-color: $lighten-darkgray;
+    background-color: $darken-darkgray;
   }
 
   .weapon {
@@ -138,6 +135,10 @@ body {
     color: #000 !important;
     border-color: #D3D023 !important;
   }
+
+  .blog {
+    background-color: $darken-darkgray;
+  }
 }
 
 .ml-15 {
@@ -146,6 +147,26 @@ body {
 
 .mr-15 {
   margin-right: 15px !important;
+}
+
+.pr-5 {
+  padding-right: 5px !important;
+}
+
+.pl-5 {
+  padding-left: 5px !important;
+}
+
+.top-left {
+  top: 20px;
+  left: 20px;
+  position: fixed;
+}
+
+.top-right {
+  top: 21px;
+  right: 0;
+  position: fixed;
 }
 
 .btn.btn-icon-only {
@@ -322,6 +343,11 @@ tr.thin {
   -webkit-box-sizing: content-box;
   -moz-box-sizing: content-box;
   box-sizing: content-box;
+}
+
+.github-fork-ribbon-wrapper.right-bottom .github-fork-ribbon {
+  top: 81px;
+  right: -42px;
 }
 
 //.footer {
