--- a/app/views/blog/index.html
+++ b/app/views/blog/index.html
@@ -1,43 +1,136 @@
-<div class="col-xs-12 col-md-12">
-  <h1 class="custom-font">h1. Heading</h1>
-  <h4 class="custom-font text-strong">Lead Paragraph</h4>
+<div class="col-xs-12 col-md-12 blog">
+  <h3 class="custom-font filled bg-lightred">
+    <span>Thursday, July 30</span>
+    <span class="right text-small">
+      <timer end-time="1438362000000">
+        {{days}} day{{daysS}}, {{hours}} hour{{hoursS}}, {{minutes}} minute{{minutesS}}, {{seconds}} second{{secondsS}}
+      </timer> until Trials
+    </span>
+  </h3>
+
+  <div class="row">
+    <div class="col-xs-6 col-md-6">
+      <h4 class="custom-font text-strong">Some useless data from last week</h4>
+      <table class="table">
+        <thead>
+        <tr>
+          <!--<th>Most user by console</th>-->
+          <th>Most used subclass</th>
+          <th>Most searched player</th>
+          <th>Player to appear most in fireteams</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr class="active">
+          <!--<td>PS4 (52.30%)</td>-->
+          <td>Bladedancer <span class="badge bg-cyan right pr-5">26%</span></td>
+          <td>Gothalion</td>
+          <td>Gothalion</td>
+        </tr>
+        <tr>
+          <!--<td>Xbox (47.70%)</td>-->
+          <td>Sunsinger <span class="badge bg-cyan right pr-5">25%</span></td>
+          <td>tripleWRECK</td>
+          <td>tripleWRECK</td>
+        </tr>
+        <tr class="active">
+          <!--<td></td>-->
+          <td>Striker <span class="badge bg-cyan right pr-5">18%</span></td>
+          <td>Allastere</td>
+          <td>cLickiTx</td>
+        </tr>
+        <tr>
+          <!--<td></td>-->
+          <td>Gunslinger <span class="badge bg-cyan right pr-5">14%</span></td>
+          <td>Dattowatto</td>
+          <td>Mr_Happymeal_99_</td>
+        </tr>
+        <tr class="active">
+          <!--<td></td>-->
+          <td>Voidwalker <span class="badge bg-cyan right pr-5">13%</span></td>
+          <td>realkraftyy</td>
+          <td>Allastere</td>
+        </tr>
+        <tr>
+          <!--<td></td>-->
+          <td>Defender <span class="badge bg-cyan right pr-5">4%</span></td>
+          <td>kjhovey</td>
+          <td>Dattowatto</td>
+        </tr>
+        </tbody>
+      </table>
+    </div>
+    <div class="col-xs-6 col-md-6">
+      <h4 class="custom-font text-strong">Recent Changes</h4>
+      <dl class="dl-horizontal filled">
+        <dd class="ml-0 text-darkgray">
+          <ul class="pl-15">
+            <li>Instead of displaying the help overlay on the front page you can now click
+              the help button at any time to show descriptions of the UI.</li>
+          </ul>
+        </dd>
+        <dd class="ml-0 text-darkgray dk">
+          <ul class="pl-15">
+            <li>Fixed issue with the strength stat dissapearing.</li>
+            <li>Updated support for screens smaller than tablets and larger than phones.</li>
+            <li>Adjusting site height after load to fill up the whole screen.</li>
+          </ul>
+        </dd>
+        <dd class="ml-0 text-darkgray">
+          <ul class="pl-15">
+            <li>No land beyond no longer displays as a revive kill sniper.</li>
+          </ul>
+        </dd>
+        <dd class="ml-0 text-darkgray dker">
+          <ul class="pl-15">
+            <li>Generating definition files through Bungies manifest, improving load time by a few seconds.</li>
+            <li>Improved inventory load time by refactoring the way we parse through definition files.</li>
+          </ul>
+        </dd>
+      </dl>
+    </div>
+  </div>
+
 
   <p class="lead">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec
     ullamcorper nulla non metus auctor fringilla.
   </p>
+  <div class="row">
+    <div class="col-xs-12 col-md-8 col-md-offset-2">
+      <h4 class="custom-font text-strong">Recent Changes</h4>
+      <dl class="dl-horizontal filled bg-dutch dk">
+        <dt>Added a front page!</dt>
+        <dd class="bg-dutch">Instead of displaying the help overlay on the front page you can now click
+          the help button at any time to show descriptions of the UI</dd>
+        <dt>UI bug fixes</dt>
+        <dd class="bg-dutch">
+          Fixed issue with the strength stat dissapearing.<br/>
+          Updated support for screens smaller than tablets and larger than phones.<br/>
+          Adjusting site height after load to fill up the whole screen.
+        </dd>
+        <dt>Updated hazard badges</dt>
+        <dd class="bg-dutch">
+          No land beyond no longer displays as a revive kill sniper.
+        </dd>
+        <dt>Backend mumbo-jumbo</dt>
+        <dd class="bg-dutch">
+          Generating definition files through Bungies manifest, improving load time by a few seconds<br/>
+          Improved inventory load time by refactoring the way we parse through definition files.
+        </dd>
+      </dl>
+    </div>
+  </div>
 
-  <h4 class="custom-font text-strong">Normal Paragraph</h4>
 
   <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec ullamcorper nulla non
     metus auctor fringilla. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec
     elit. Donec ullamcorper nulla non metus auctor fringilla.
   </p>
 
-  <dl class="dl-horizontal filled bg-dutch dk">
-    <dt>Description lists</dt>
-    <dd class="bg-dutch">A description list is perfect for defining terms.</dd>
-    <dt>Euismod</dt>
-    <dd class="bg-dutch">Vestibulum id ligula porta felis euismod semper eget lacinia odio sem nec elit.</dd>
-    <dd class="bg-dutch">Donec id elit non mi porta gravida at eget metus.</dd>
-    <dt>Malesuada porta</dt>
-    <dd class="bg-dutch">Etiam porta sem malesuada magna mollis euismod.</dd>
-    <dt>Malesuada porta</dt>
-    <dd class="bg-dutch">Etiam porta sem malesuada magna mollis euismod.</dd>
-  </dl>
-
   <div class="row">
     <div class="col-xs-6 col-md-6">
       <iframe width="560" height="315" src="https://www.youtube.com/embed/2K0wBdziax0" frameborder="0"
               allowfullscreen></iframe>
-    </div>
-    <div class="col-xs-6 col-md-6">
-      <h4 class="custom-font text-strong">Normal Paragraph</h4>
-
-      <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec ullamcorper nulla non
-        metus auctor fringilla. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec
-        elit. Donec ullamcorper nulla non metus auctor fringilla.
-      </p>
-
     </div>
   </div>
   <div class="tile-body"><h4 class="custom-font">Normal</h4>
