--- a/app/views/shared/header.html
+++ b/app/views/shared/header.html
@@ -22,10 +22,10 @@
           </form>
         </div>
         <div class="col-md-2 hidden-xs hidden-sm m-0 pl-0 top-right text-white">
-          <button type="button" class="btn btn-darkgray mb-10"
-                  ng-click="changeTheme($root.theme === 'bg-white' ? 'dark-theme' : 'bg-white')">
-                  {{$root.theme === 'bg-white' ? 'Dark' : 'Light'}} Theme
-          </button>
+          <!--<button type="button" class="btn btn-darkgray mb-10"-->
+                  <!--ng-click="changeTheme($root.theme === 'bg-white' ? 'dark-theme' : 'bg-white')">-->
+                  <!--{{$root.theme === 'bg-white' ? 'Dark' : 'Light'}} Theme-->
+          <!--</button>-->
           <button type="button" class="btn btn-darkgray mb-10"
                   ng-click="toggleOverlay()" >Help</button>
         </div>
