--- a/app/views/blog/index.html
+++ b/app/views/blog/index.html
@@ -1,14 +1,14 @@
 <div class="col-xs-12 col-md-12 blog">
-  <h3 class="custom-font filled bg-lightred">
-    <span>Thursday, July 30</span>
-    <span class="right text-small">
-      <timer end-time="1438362000000">
-        {{days}} day{{daysS}}, {{hours}} hour{{hoursS}}, {{minutes}} minute{{minutesS}}, {{seconds}} second{{secondsS}}
-      </timer> until Trials
-    </span>
-  </h3>
+  <!--<h3 class="custom-font filled bg-lightred">-->
+    <!--<span>Thursday, July 30</span>-->
+    <!--<span class="right text-small">-->
+      <!--<timer end-time="1438362000000">-->
+        <!--{{days}} day{{daysS}}, {{hours}} hour{{hoursS}}, {{minutes}} minute{{minutesS}}, {{seconds}} second{{secondsS}}-->
+      <!--</timer> until Trials-->
+    <!--</span>-->
+  <!--</h3>-->
 
-  <div class="row">
+  <div class="row bg-default lter">
     <div class="col-xs-6 col-md-6">
       <h4 class="custom-font text-strong">Some useless data from last week</h4>
       <table class="table">
@@ -92,57 +92,57 @@
   </div>
 
 
-  <p class="lead">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec
-    ullamcorper nulla non metus auctor fringilla.
-  </p>
-  <div class="row">
-    <div class="col-xs-12 col-md-8 col-md-offset-2">
-      <h4 class="custom-font text-strong">Recent Changes</h4>
-      <dl class="dl-horizontal filled bg-dutch dk">
-        <dt>Added a front page!</dt>
-        <dd class="bg-dutch">Instead of displaying the help overlay on the front page you can now click
-          the help button at any time to show descriptions of the UI</dd>
-        <dt>UI bug fixes</dt>
-        <dd class="bg-dutch">
-          Fixed issue with the strength stat dissapearing.<br/>
-          Updated support for screens smaller than tablets and larger than phones.<br/>
-          Adjusting site height after load to fill up the whole screen.
-        </dd>
-        <dt>Updated hazard badges</dt>
-        <dd class="bg-dutch">
-          No land beyond no longer displays as a revive kill sniper.
-        </dd>
-        <dt>Backend mumbo-jumbo</dt>
-        <dd class="bg-dutch">
-          Generating definition files through Bungies manifest, improving load time by a few seconds<br/>
-          Improved inventory load time by refactoring the way we parse through definition files.
-        </dd>
-      </dl>
-    </div>
-  </div>
+  <!--<p class="lead">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec-->
+    <!--ullamcorper nulla non metus auctor fringilla.-->
+  <!--</p>-->
+  <!--<div class="row">-->
+    <!--<div class="col-xs-12 col-md-8 col-md-offset-2">-->
+      <!--<h4 class="custom-font text-strong">Recent Changes</h4>-->
+      <!--<dl class="dl-horizontal filled bg-dutch dk">-->
+        <!--<dt>Added a front page!</dt>-->
+        <!--<dd class="bg-dutch">Instead of displaying the help overlay on the front page you can now click-->
+          <!--the help button at any time to show descriptions of the UI</dd>-->
+        <!--<dt>UI bug fixes</dt>-->
+        <!--<dd class="bg-dutch">-->
+          <!--Fixed issue with the strength stat dissapearing.<br/>-->
+          <!--Updated support for screens smaller than tablets and larger than phones.<br/>-->
+          <!--Adjusting site height after load to fill up the whole screen.-->
+        <!--</dd>-->
+        <!--<dt>Updated hazard badges</dt>-->
+        <!--<dd class="bg-dutch">-->
+          <!--No land beyond no longer displays as a revive kill sniper.-->
+        <!--</dd>-->
+        <!--<dt>Backend mumbo-jumbo</dt>-->
+        <!--<dd class="bg-dutch">-->
+          <!--Generating definition files through Bungies manifest, improving load time by a few seconds<br/>-->
+          <!--Improved inventory load time by refactoring the way we parse through definition files.-->
+        <!--</dd>-->
+      <!--</dl>-->
+    <!--</div>-->
+  <!--</div>-->
 
 
-  <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec ullamcorper nulla non
-    metus auctor fringilla. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec
-    elit. Donec ullamcorper nulla non metus auctor fringilla.
-  </p>
+  <!--<p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec ullamcorper nulla non-->
+    <!--metus auctor fringilla. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec-->
+    <!--elit. Donec ullamcorper nulla non metus auctor fringilla.-->
+  <!--</p>-->
 
-  <div class="row">
-    <div class="col-xs-6 col-md-6">
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/2K0wBdziax0" frameborder="0"
-              allowfullscreen></iframe>
-    </div>
-  </div>
-  <div class="tile-body"><h4 class="custom-font">Normal</h4>
-    <address><strong>Twitter, Inc.</strong><br> 795 Folsom Ave, Suite 600<br> San Francisco, CA 94107<br> <abbr
-      title="Phone">P:</abbr> (123) 456-7890
-    </address>
-    <address><strong>Full Name</strong><br> <a href="mailto:#">first.last@example.com</a></address>
-    <h4>Filled</h4>
-    <address class="filled bg-default"><strong class="bg-default dk">Twitter, Inc.</strong><br> 795 Folsom Ave, Suite
-      600<br> San Francisco, CA 94107<br> <abbr title="Phone">P:</abbr> (123) 456-7890 <i
-        class="fa fa-map-marker pull-right"></i></address>
-    <address class="filled append bg-primary"><strong class="bg-primary dk">Full Name</strong><br> <a href="mailto:#">first.last@example.com</a>
-    </address>
-  </div>
+  <!--<div class="row">-->
+    <!--<div class="col-xs-6 col-md-6">-->
+      <!--<iframe width="560" height="315" src="https://www.youtube.com/embed/2K0wBdziax0" frameborder="0"-->
+              <!--allowfullscreen></iframe>-->
+    <!--</div>-->
+  <!--</div>-->
+  <!--<div class="tile-body"><h4 class="custom-font">Normal</h4>-->
+    <!--<address><strong>Twitter, Inc.</strong><br> 795 Folsom Ave, Suite 600<br> San Francisco, CA 94107<br> <abbr-->
+      <!--title="Phone">P:</abbr> (123) 456-7890-->
+    <!--</address>-->
+    <!--<address><strong>Full Name</strong><br> <a href="mailto:#">first.last@example.com</a></address>-->
+    <!--<h4>Filled</h4>-->
+    <!--<address class="filled bg-default"><strong class="bg-default dk">Twitter, Inc.</strong><br> 795 Folsom Ave, Suite-->
+      <!--600<br> San Francisco, CA 94107<br> <abbr title="Phone">P:</abbr> (123) 456-7890 <i-->
+        <!--class="fa fa-map-marker pull-right"></i></address>-->
+    <!--<address class="filled append bg-primary"><strong class="bg-primary dk">Full Name</strong><br> <a href="mailto:#">first.last@example.com</a>-->
+    <!--</address>-->
+  <!--</div>-->
 </div>
