--- a/app/views/shared/footer.html
+++ b/app/views/shared/footer.html
@@ -1,30 +1,35 @@
 <footer class="footer">
   <div class="container">
-    <div class="row visible-xs-block mb-5">
-      <div class="col-xs-12 text-center">
-        <div class="sharethis">
-          <span class='st_facebook_hcount' displayText='Facebook'></span>
-          <span class='st_twitter_hcount' displayText='Tweet'></span>
-        </div>
-      </div>
-    </div>
     <div class="row">
-      <div class="col-xs-6 col-sm-4 text-left mt-10">
-        <h5 class="custom-font">© 2015 DestinyTrialsReport</h5>
+      <div class="col-md-2 col-xs-6 hidden-xs">
+        <h5 class="custom-font pt-10 text-left">© 2015 DestinyTrialsReport</h5>
       </div>
-      <div class="hidden-xs col-sm-4 text-center" style="margin-top:17px">
+      <div class="col-md-8 col-xs-12">
+        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <!-- DestinyTrialsReport - Responsive -->
+        <ins class="adsbygoogle"
+             style="display:block"
+             data-ad-client="ca-pub-5549262666967585"
+             data-ad-slot="7148544984"
+             data-ad-format="auto"></ins>
+        <script>
+          (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+      </div>
+      <div class="col-md-2 col-xs-6 visible-xs">
+        <h5 class="custom-font pt-10 text-left">© 2015 DestinyTrialsReport</h5>
+      </div>
+      <div class="col-md-2 col-xs-6 mt-5">
         <div class="sharethis">
           <span class='st_facebook_hcount' displayText='Facebook'></span>
           <span class='st_twitter_hcount' displayText='Tweet'></span>
         </div>
-      </div>
-      <div class="col-xs-6 col-sm-4 text-right mt-5">
-        <form action="https://www.paypal.com/cgi-bin/webscr" method="post" class="text-right" target="_top">
-          <input type="hidden" name="cmd" value="_s-xclick">
-          <input type="hidden" name="hosted_button_id" value="A3T6F2QDXUTCN">
-          <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-          <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-        </form>
+        <!--<form action="https://www.paypal.com/cgi-bin/webscr" method="post" class="text-right" target="_top">-->
+          <!--<input type="hidden" name="cmd" value="_s-xclick">-->
+          <!--<input type="hidden" name="hosted_button_id" value="A3T6F2QDXUTCN">-->
+          <!--<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">-->
+          <!--<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">-->
+        <!--</form>-->
       </div>
     </div>
   </div>
