--- a/app/views/blog/index.html
+++ b/app/views/blog/index.html
@@ -7,7 +7,7 @@
       <!--</timer> until Trials-->
     <!--</span>-->
   </h3>
-  <img src="/images/ToO_WidowsCourt_Heatmap.jpg" class="img-responsive">
+  <img src="/images/ToO_WidowsCourt_Heatmap.jpg" class="img-responsive" style="border-color: #e7e7e7;border: 1px solid;">
   <!--<div class="row bg-default lter">-->
     <!--<div class="col-xs-6 col-md-6">-->
       <!--<h4 class="custom-font text-strong">Some useless data from last week</h4>-->
