--- a/app/views/shared/header.html
+++ b/app/views/shared/header.html
@@ -8,7 +8,7 @@
               <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="platformSwitch" ng-model="platformValue">
               <label class="onoffswitch-label z99999999" for="platformSwitch"
                      data-intro="Toggle between PS and Xbox platforms"
-                     data-position="left" ng-attr-data-class="hidden-xs hidden-sm">
+                     data-position="left" ng-attr-data-opts="hidden-xs hidden-sm">
                 <span class="onoffswitch-inner"></span>
                 <span class="onoffswitch-switch"></span>
               </label>
