--- a/app/views/fireteam/index.html
+++ b/app/views/fireteam/index.html
@@ -29,7 +29,7 @@
   </div>
   <div class="row" ng-hide="$index === 0">
     <div class="col-xs-12">
-      <form class="form-horizontal" role="form" ng-submit="searchPlayerbyName(teammateName, platformValue, $index, true)">
+      <form class="form-horizontal" role="form" ng-submit="searchPlayerbyName(teammateName, platformValue, $index, false)">
         <div class="input-group" ng-class="helpOverlay && ($index === 2) ? 'z99999999' : ''">
               <span ng-hide="recentPlayers" class="input-group-btn">
                 <button class="btn btn-trials btn-default" type="button"
