--- a/app/views/shared/footer.html
+++ b/app/views/shared/footer.html
@@ -1,7 +1,7 @@
-<footer class="footer" style="color: white;" id="footer">
+<footer class="footer" id="footer">
   <div class="container">
     <div class="row">
-      <div class="col-md-12 col-xs-12 mt-5">
+      <div class="col-md-12 col-xs-12 mt-10">
         <div class="col-md-2 col-xs-6">
           <h5 class="custom-font pt-10 text-left">©2015 DestinyTrialsReport</h5>
         </div>
