--- a/app/views/blog/index.html
+++ b/app/views/blog/index.html
@@ -1,13 +1,13 @@
 <div class="col-xs-12 col-md-6 col-md-offset-3 blog text-center">
   <h3 class="custom-font filled bg-danger mb-0">
-    Widows Court Heatmap
+    Burning Shrine Heatmap
     <!--<span class="right text-small">-->
       <!--<timer end-time="1438362000000">-->
         <!--{{days}} day{{daysS}}, {{hours}} hour{{hoursS}}, {{minutes}} minute{{minutesS}}, {{seconds}} second{{secondsS}}-->
       <!--</timer> until Trials-->
     <!--</span>-->
   </h3>
-  <img src="/images/ToO_WidowsCourt_Heatmap.jpg" class="img-responsive" style="border-color: #e7e7e7;border: 1px solid;">
+  <img src="/images/ToO_BurningShrine_Heatmap.jpg" class="img-responsive" style="border-color: #e7e7e7;border: 1px solid;">
   <!--<div class="row bg-default lter">-->
     <!--<div class="col-xs-6 col-md-6">-->
       <!--<h4 class="custom-font text-strong">Some useless data from last week</h4>-->
