--- a/app/views/fireteam/player.html
+++ b/app/views/fireteam/player.html
@@ -23,7 +23,7 @@
        style="border: none;"
        analytics-on analytics-event="Click" analytics-category="DestinyTracker"
        data-intro="Links to <strong>DestinyTracker</strong> for more detailed statistics based on all characters and maps"
-       data-position="right" ng-attr-data-opts="hidden-xs hidden-sm">
+       data-position="right" ng-attr-data-opts="hidden-xs hidden-sm {{$middle ? '' : 'hidden'}}">
        View DestinyTracker Stats
      </a>
   </div>
