--- a/app/views/fireteam/stats.html
+++ b/app/views/fireteam/stats.html
@@ -20,16 +20,15 @@
     </progress>
   </div>
 </div>
-
-<div class="row ml-0 mr-0 mb-10" data-intro="Match win/loss history<br/><em>hover over the icons for details</em>"
-     data-position="right" ng-attr-data-opts="hidden-xs hidden-sm {{$middle ? '' : 'hidden'}}">
-  <div class="col-xs-12 pr-0 pl-0 text-center win-loss">
-    <i class="fa fa-circle mr-3 {{$index < 7 ? (player.pastActivities.length - $index ) > 18 ? 'hidden-xs hidden-md' : '' : ''}}"
-       ng-repeat="str in player.pastActivities track by $index"
-       ng-class="str.standing === 0 ? 'win' : 'lose'"
-       popover="K/D: {{str.kd}} with {{str.kills}} kills"
-       popover-title="{{str.date | date : format : medium}}"
-       popover-trigger="mouseenter"
-      ></i>
-  </div>
-</div>
+<div trials-history="player.pastActivities" isMiddle="$middle"></div>
+<!--<div class="row ml-0 mr-0 mb-10" data-intro="Match win/loss history<br/><em>hover over the icons for details</em>"-->
+     <!--data-position="right" ng-attr-data-opts="hidden-xs hidden-sm {{$middle ? '' : 'hidden'}}">-->
+  <!--<div class="col-xs-12 pr-0 pl-0 text-center win-loss">-->
+    <!--<i class="fa fa-circle mr-3 {{$index < 7 ? (player.pastActivities.length - $index ) > 18 ? 'hidden-xs hidden-md' : '' : ''}}"-->
+       <!--ng-repeat="str in player.pastActivities track by $index"-->
+       <!--ng-class="str.standing === 0 ? 'win' : 'lose'"-->
+       <!--popover="K/D: {{str.kd}} with {{str.kills}} kills"-->
+       <!--popover-title="{{str.date | date : format : medium}}"-->
+       <!--popover-trigger="mouseenter"></i>-->
+  <!--</div>-->
+<!--</div>-->
