--- a/app/views/fireteam/armor.html
+++ b/app/views/fireteam/armor.html
@@ -1,10 +1,11 @@
 <div class="row ml-0 mr-0" data-intro="Current equipped armor <br/><em>hover over image for the name</em>"
      data-position="left" ng-attr-data-opts="hidden-xs hidden-sm {{$middle ? '' : 'hidden'}}">
-  <div class="col-md-3 col-xs-3" ng-repeat="armor in [player.armors.head, player.armors.arms, player.armors.chest, player.armors.legs] track by $index">
-    <div class="card">
-      <div class="front p-0">
-        <img popover="{{armor.armor.name}}" popover-trigger="mouseenter" class="img-responsive" ng-src="{{armor.armor.icon}}">
-      </div>
-    </div>
-  </div>
+  <div armor-list="[player.armors.head, player.armors.arms, player.armors.chest, player.armors.legs]"></div>
+  <!--<div class="col-md-3 col-xs-3" ng-repeat="armor in [player.armors.head, player.armors.arms, player.armors.chest, player.armors.legs] track by $index">-->
+    <!--<div class="card">-->
+      <!--<div class="front p-0">-->
+        <!--<img popover="{{armor.armor.name}}" popover-trigger="mouseenter" class="img-responsive" ng-src="{{armor.armor.icon}}">-->
+      <!--</div>-->
+    <!--</div>-->
+  <!--</div>-->
 </div>
