--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,10 +1,10 @@
-<ng-include src="headerPartial"></ng-include>
-<div class="container" ng-hide="status">
-  <div class="row">
-    <ng-include src="'views/fireteam/index.html'" ng-show="fireteam[0]"></ng-include>
-    <ng-include src="'views/blog/index.html'" ng-show="!fireteam[0]"></ng-include>
+<div class="flex-container">
+  <ng-include src="headerPartial"></ng-include>
+  <div class="container flex" ng-hide="status">
+    <div class="row">
+      <ng-include src="'views/fireteam/index.html'" ng-show="fireteam[0]"></ng-include>
+      <ng-include src="'views/blog/index.html'" ng-show="!fireteam[0]"></ng-include>
+    </div>
   </div>
-
+  <ng-include src="'views/shared/footer.html'"></ng-include>
 </div>
-
-<ng-include src="'views/shared/footer.html'"></ng-include>
