--- a/app/views/shared/footer.html
+++ b/app/views/shared/footer.html
@@ -4,7 +4,7 @@
       <div class="hidden-xs col-md-2 text-left">
         <h5 class="custom-font pt-20">©2015 DestinyTrialsReport</h5>
       </div>
-      <div class="col-xs-12 col-md-8 text-center">
+      <div class="col-xs-12 col-md-8 text-center" style="overflow:hidden">
         <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
         <!-- DestinyTrialsReport - Responsive -->
         <ins class="adsbygoogle"
