increase response times

--- a/app/views/fireteam/history.html
+++ b/app/views/fireteam/history.html
@@ -106,7 +106,7 @@
     <a class="icon"
        popover="{{DestinyMedalDefinition[medal.id].statDescription}}"
        popover-trigger="mouseenter">
-      <img class="img-responsive" ng-src="{{('http://www.bungie.net' + DestinyMedalDefinition[medal.id].iconImage) || ''}}">
+      <img class="img-responsive" ng-src="{{('https://www.bungie.net' + DestinyMedalDefinition[medal.id].iconImage) || ''}}">
     </a>
     <p class="text-sm" ng-bind="DestinyMedalDefinition[medal.id].statName"></p>
   </div>
