add api and remove anfular foreach

--- a/app/views/shared/footer.html
+++ b/app/views/shared/footer.html
@@ -5,16 +5,7 @@
         <h5 class="custom-font pt-20">©2015 DestinyTrialsReport</h5>
       </div>
       <div class="col-xs-12 col-md-8 text-center" style="overflow:hidden">
-        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-        <!-- DestinyTrialsReport - Responsive -->
-        <ins class="adsbygoogle"
-             style="display:block"
-             data-ad-client="ca-pub-5549262666967585"
-             data-ad-slot="7148544984"
-             data-ad-format="auto"></ins>
-        <script>
-          (adsbygoogle = window.adsbygoogle || []).push({});
-        </script>
+        <div ad-sense></div>
       </div>
       <div class="visible-xs-block col-xs-6 text-left">
         <h5 class="custom-font pt-20">©2015 DestinyTrialsReport</h5>
