styling change and add back bungie status

--- a/app/views/blog/index.html
+++ b/app/views/blog/index.html
@@ -1,5 +1,5 @@
 <div class="col-xs-12 col-md-6 col-md-offset-3 blog text-center">
-  <h3 class="custom-font filled bg-danger mb-0">
+  <h3 class="custom-font filled bg-darkgray mb-0">
     Burning Shrine Heatmap
     <!--<span class="right text-small">-->
       <!--<timer end-time="1438362000000">-->
