--- a/app/views/fireteam/index.html
+++ b/app/views/fireteam/index.html
@@ -76,7 +76,7 @@
           </span>
     </div>
   </div>
-  <section class="tile tile-simple player bg-default lter" ng-class="helpOverlay && ($middle) ? 'z99999999' : 'z000000'">
+  <section class="tile tile-simple player " ng-class="helpOverlay && ($middle) ? 'z99999999' : 'z000000'">
     <div class="tile-body p-0">
       <ng-include src="'views/fireteam/player.html'"></ng-include>
     </div>
